# reliefseq

./: .gitignore  AUTHORS  ArffDataset.cpp  AttributeRanker.cpp  AttributeRanker.h  ChiSquared.h  Dataset.cpp  Dataset.h  DatasetInstance.cpp  DatasetInstance.h  DistanceMetrics.cpp  INSTALL  Insilico.cpp  Makefile.am  PlinkBinaryDataset.cpp  PlinkDataset.cpp  README  README.md  ReliefF.cpp  ReliefF.h  ReliefFSeq.cpp  ReliefSeqCLI.cpp  ReliefSeqController.cpp  ReliefSeqController.h  config.h  configure.ac  description  osx_prepare_cmds.sh
